--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,41 @@
 .intestazione {
     background-color:turquoise;
 }
+
+/* MAIN */
+
+ul{
+    margin-left:20px;
+}
+
+table {
+    border-collapse: collapse;
+    margin-top:30px;
+    border-color: white;
+}
+
+th{
+    color:white;
+    background-color:rgb(127, 166, 251);
+    padding-right:100px;
+}
+
+.seconda_riga,.quarta_riga {
+    background-color:rgb(223, 229, 242);
+}
+
+td {
+    padding:7px;
+}
+
+
+/* footer */
+
+.fondo_pagina {
+    background-color:rgb(49, 58, 107);
+    color:white;
+    padding:14px;
+    text-align: center;
+    margin-top:40px;
+}
+
